<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.welcome.WelcomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewWelcomeTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="79dp"
            android:text="@string/welcome_text_two"
            app:layout_constraintEnd_toEndOf="@+id/textViewWelcomeOne"
            app:layout_constraintStart_toStartOf="@+id/textViewWelcomeOne"
            app:layout_constraintTop_toBottomOf="@+id/textViewWelcomeOne" />

        <TextView
            android:id="@+id/textViewWelcomeOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="244dp"
            android:layout_marginEnd="135dp"
            android:text="@string/welcome_text_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonGoToInstruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:text="@string/go_to_instructions"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/textViewWelcomeTwo"
            app:layout_constraintStart_toStartOf="@+id/textViewWelcomeTwo"
            app:layout_constraintTop_toBottomOf="@+id/textViewWelcomeTwo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>