<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.instructions.InstructionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonToShoeList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="59dp"
            android:layout_marginBottom="289dp"
            android:text="@string/go_to_shoe_lists"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textViewInstructionTextTwo"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="@+id/textViewInstructionTextTwo"
            app:layout_constraintTop_toBottomOf="@+id/textViewInstructionTextTwo" />

        <TextView
            android:id="@+id/textViewInstructionTextTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/instruction_text_two"
            app:layout_constraintEnd_toEndOf="@+id/textViewInstructionTextOne"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewInstructionTextOne"
            app:layout_constraintTop_toBottomOf="@+id/textViewInstructionTextOne" />

        <TextView
            android:id="@+id/textViewInstructionTextOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="162dp"
            android:layout_marginTop="262dp"
            android:layout_marginEnd="129dp"
            android:text="@string/instruction_text_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>